# Portfolio-Prism-App

./: .env.example  .gitignore  .last-branch  .lintstagedrc.json  .prettierignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  INITIATOR.md  MVP_CLEANUP_PLAN.md  PROJECT_CONTEXT.md  README.md  REVIEW_PLAN.md  WALKTHROUGH_DATA_PIPELINES.md  eslint.config.js  find_fstring_logs.py  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  report.md  run_debug_pipeline.py  test_debug.py  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/python/: .gitignore  .last_build_hash  diag_hive.py  main.py  prism.spec  prism_boot.py  prism_headless.py  prism_headless.spec  pyproject.toml  requirements-build.txt  tach.toml  tr_daemon.spec
src-tauri/python/config/: adapter_registry.json  ticker_map.json
src-tauri/python/default_config/: asset_names.json  asset_universe.csv  asset_universe.csv.bak.20251130_234237  asset_universe.csv.bak.20251130_234329  asset_universe.csv.bak.20251202_190804  ishares_config.json  suggested_isins.json  ticker_map.json
src-tauri/python/outputs/: pipeline_errors.json
src-tauri/python/portfolio_src/: config.py  conftest.py
src-tauri/python/portfolio_src/adapters/: amundi.py  csv_adapter.py  ishares.py  registry.py  tr_adapter.py  vaneck.py  vanguard.py  xtrackers.py
src-tauri/python/portfolio_src/core/: data_cleaner.py  direct_reporting.py  enrichment_gaps.py  errors.py  harvesting.py  health.py  migration.py  pipeline.py  position_keeper.py  reporter.py  reporting.py  schema.py  security_mapper.py  tr_auth.py  tr_bridge.py  tr_daemon.py  tr_protocol.py  utils.py  validation.py
src-tauri/python/portfolio_src/dashboard/: app.py  utils.py
src-tauri/python/portfolio_src/data/: caching.py  community_sync.py  database.py  enrichment.py  historical_prices.py  history_manager.py  hive_client.py  (+17 more)
src-tauri/python/scripts/: seed_hive.py
src-tauri/python/tests/: conftest.py  smoke_test_imports.py  test_adapters.py  test_data_cleaner.py  test_decomposer_resolution.py  test_etf_holdings_sync.py  test_headless_integration.py  test_hive_client_read.py  test_hive_integration.py  test_holdings_resolution.py  test_isin_resolver_hive.py  test_local_cache.py  test_market_resolution.py  test_normalizer.py  test_performance_trust.py  test_phase5_bugfixes.py  test_pipeline_e2e.py  test_pipeline_integration.py  test_pipeline_smoke.py  test_pipeline_verification.py  test_resolution_phase2.py  test_resolution_phase3.py  test_resolution_phase4.py  test_resolution_phase5.py  test_schema_normalization.py  test_services.py  test_telemetry.py  test_tr_auth_unit.py  test_tr_daemon_subprocess.py  test_tr_daemon_unit.py  test_tr_protocol.py  test_tr_sync.py  test_utils.py
(+742 files in other folders)
