[project]
name = "portfolio-prism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.3",
    "deep-translator>=1.11.4",
    "keyring>=25.7.0",
    "lxml>=6.0.2",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "pandera>=0.27.0",
    "pdfplumber>=0.11.8",
    "pyarrow>=14.0.0",
    "pydantic>=2.12.5",
    "pyinstaller>=6.0",
    "python-dotenv>=1.2.1",
    "pytr>=0.4.5",  # Security: kept at latest for Trade Republic API compatibility
    "requests>=2.32.5",
    "httpx>=0.28.0",
    "supabase>=2.27.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
    "rich>=13.0.0",
    "fastapi>=0.126.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pip-audit>=2.10.0",  # Security: automated vulnerability scanning
    "ruff>=0.14.14",
    "mypy>=1.14.0",       # Type checking: strict mode with incremental strictness
    "tach>=0.33.1",
]

# Ruff linter configuration - 2026 Standards
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle errors, F: pyflakes, I: isort, B: flake8-bugbear, UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]
# Ignore specific rules that conflict with existing codebase patterns
ignore = [
    "E501",  # Line too long - handled by formatter, not linter
]

[tool.ruff.lint.isort]
known-first-party = ["portfolio_src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Mypy type checker configuration - per specs/06-python-tooling.md
[tool.mypy]
python_version = "3.12"
strict = false              # Start non-strict, ramp up incrementally
ignore_missing_imports = true
disallow_untyped_defs = true
files = ["portfolio_src"]
